# polyscope

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
examples/demo-app/: CMakeLists.txt  demo_app.cpp
include/polyscope/render/opengl/: gl_engine.h
src/: CMakeLists.txt  messages.cpp  polyscope.cpp  screenshot.cpp  slice_plane.cpp  transformation_gizmo.cpp  view.cpp
src/render/: engine.cpp  ground_plane.cpp
src/render/opengl/: gl_engine.cpp
src/render/opengl/shaders/: rules.cpp
